--- a/bluestyle.css
+++ b/bluestyle.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0px;
+}
+
 @keyframes bgcolor {
     0% {
         background-color: #45a3e5
@@ -25,4 +29,15 @@ body {
     animation: bgcolor 10s infinite;
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
+}
+
+div {
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+}
+
+iframe {
+    left: 29%;
+    position: relative;
 }
