--- a/bluestyle.css
+++ b/bluestyle.css
@@ -26,3 +26,9 @@ body {
     -webkit-animation-direction: alternate;
     animation-direction: alternate;
 }
+
+#qdrd {
+    width: 50px;
+    height: 50px;
+    background-color: #f35;
+}
